update image name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}/szuru-app
+          images: ghcr.io/${{ github.repository }}
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
